# Dental-AI-Assistant

./: .env.template  .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml
dental_assistant/: __init__.py  settings.py
dental_assistant/application/: __init__.py  appointment_resolution.py  conversation.py  engine.py  family_booking.py  orchestrator.py  patient_gate.py  patient_identity.py  visit_notes.py
dental_assistant/data/: faq.json
dental_assistant/domain/: __init__.py  appointments.py  constants.py  date_resolver.py  models.py  prompts.py  pt_time.py  question_selector.py  time_parse.py  utterances.py
dental_assistant/infrastructure/: __init__.py  db.py  queries.py  tools.py
dental_assistant/infrastructure/llm/: __init__.py  client.py  gemini_provider.py  openai_provider.py  protocol.py
dental_assistant/interfaces/: __init__.py  api.py  streamlit_app.py
tests/: test_deterministic.py
