[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dental-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "uvicorn>=0.43.0",
    "ruff>=0.11.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dental_assistant"]

[tool.hatch.build.targets.wheel.force-include]
"dental_assistant/data/faq.json" = "dental_assistant/data/faq.json"
